--- a/src/App.css
+++ b/src/App.css
@@ -16,6 +16,18 @@ body{
   text-align: center;
 }
 
+.masthead{
+  display: flex;
+  align-items: center;
+  background-image: linear-gradient(135deg,
+  rgb(24,42,115) 0%,
+  rgb(33,138,174) 69%, 
+  rgb(32,167,172) 89%) !important ;
+  height: 100vh;
+}
+.masthead.h1.ui.header{
+  font-size: 4em;
+}
 #eventListItem i:nth-child(2){
   margin-left: 0.5rem;
 
@@ -24,4 +36,8 @@ body{
 #eventListItem .deleteBtn{
   height: fit-content;
   background-color: transparent;
+}
+
+.eventDetailedImg{
+  max-width: 250px;
 }
