--- a/src/App.css
+++ b/src/App.css
@@ -17,13 +17,14 @@ body{
 }
 
 .masthead{
-  display: flex;
-  align-items: center;
+  
   background-image: linear-gradient(135deg,
   rgb(24,42,115) 0%,
   rgb(33,138,174) 69%, 
   rgb(32,167,172) 89%) !important ;
   height: 100vh;
+  padding: 0;
+  margin: 0;
 }
 .masthead.h1.ui.header{
   font-size: 4em;
@@ -40,4 +41,15 @@ body{
 
 .eventDetailedImg{
   max-width: 250px;
+}
+
+.react-datepicker-wrapper{
+  width: 100%;
+}
+
+.error-message {
+  color: #cc0033;
+  font-size: 13px;
+  margin: 0.2rem 0 0 0.5rem;
+  text-align: left;
 }
